Some first steps for i18n

--- a/OnePassword/OnePassword.Shared/pages/misc/master_password.html
+++ b/OnePassword/OnePassword.Shared/pages/misc/master_password.html
@@ -13,19 +13,22 @@
             <h1 class="titlearea win-type-ellipsis">
                 <span class="pagetitle">
                     OnePassword<br />
-                    <small><i class="fa fa-angle-right"></i>&nbsp; Master password</small>
+                    <small>
+                        <i class="fa fa-angle-right"></i>&nbsp;
+                        <span data-win-res="{textContent: 'pages.misc.master_password.sub_title'}"></span>
+                    </small>
                 </span>
             </h1>
         </header>
 
         <section class="page-section" aria-label="Main content" role="main">
-            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et</p>
+            <p data-win-res="{textContent: 'pages.misc.master_password.teaser'}" style="text-align: justify"></p>
             <p><input type="password" name="masterPassword" /></p>
             <p>
                 <input type="checkbox" name="keepPassword" value="1" />
-                yaddi
+                <span data-win-res="{textContent: 'pages.misc.master_password.keep_password'}"></span>
             </p>
-            <p><button>Submit</button></p>
+            <p><button data-win-res="{textContent: 'pages.misc.master_password.submit'}"></button></p>
         </section>
     </div>
 </body>
