--- a/OnePassword/OnePassword.Shared/pages/misc/sync.html
+++ b/OnePassword/OnePassword.Shared/pages/misc/sync.html
@@ -13,7 +13,10 @@
             <h1 class="titlearea win-type-ellipsis">
                 <span class="pagetitle">
                     OnePassword<br />
-                    <small><i class="fa fa-angle-right"></i>&nbsp; Synchronizing</small>
+                    <small>
+                        <i class="fa fa-angle-right"></i>&nbsp;
+                        <span data-win-res="{textContent: 'pages.misc.sync.sub_title'}"></span>
+                    </small>
                 </span>
             </h1>
         </header>
